# GeoNDT

./: LICENSE  readme.rst  setup.cfg  setup.py
docs/: Makefile  authors.rst  conf.py  index.rst  installation.rst  readme.rst  reference.rst  usage.rst
src/GeoNDT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fortrangeondt/: PoroSEM.f90
src/geondt/: __init__.py  inverselaplace.py  one_phase_dispersion.py  one_phase_dynamic.py
tests/: config_BE_dry.json  test.py
