[metadata]
name = GeoNDT
version = 0.3.0
license = MIT
description = GeoNDT: a fast general-purpose computational tool for geotechnical non-destructive testing applications 
long_description = file: README.rst  
long_description_content_type = text/x-rst
author = Hongwei Liu; Pooneh Maghoul; Guillaume Mantelet; Ahmed Shalaby
author_email = liuh3429@myumanitoba.ca
url = https://github.com/Siglab-code/GeoNDT
keywords =
  GeoNDT
  Geophysics
  geotechnical earthquake engineering
  non-destructive testing
  dispersion
  multiphase geomaterials
  spectral element
  seismic tests
  ultrasonic
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Fortran
  Programming Language :: Python
  Programming Language :: Python :: 3.7 
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Physics
  Topic :: Utilities

[options]
python_requires = >= 3.7
include_package_data = True
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
  numpy

[options.entry_points]
console_scripts =
  geondt = geondt.__main__:main

[options.packages.find]
where=src
 
[aliases]
release = register clean --all sdist

[isort]
line_length=120
default_section=THIRDPARTY
length_sort=1
multi_line_output=0

[matrix]

python_versions =
    3.7
    3.8
    
coverage_flags =
    : true
    nocover: false

environment_variables =
    -

